HACK: correct header z-index so that it's visible.

--- a/fluid.css
+++ b/fluid.css
@@ -60,3 +60,9 @@ body.fluid-is-editing .mdl-layout__container {
 body.fluid-is-editing #fluid-dev-tools {
   display: block;
 }
+
+/* HACK header's z-index is messed up for some reason. MDL bug? */
+.mdl-layout__header {
+  z-index: 6 !important;
+}
+
